# XDecisionTree

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py  test.py
examples/: breast_cancer.ipynb  covertype.ipynb  wine.ipynb
tests/: covertype_test.py  iris_test.py  utility.py  wine_test.py
xdecisiontree/: __init__.py  xdecisiontree.py
